# git_notification

./: .env.ci  .env.example  .env.test  .gitlab-ci.yml  CLAUDE.md  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
deployments/compose/backend/: Dockerfile  start
src/: alembic.ini  app.py  main.py
src/api/: health.py  router.py
src/api/webhooks/: gitlab.py  telegram.py
src/bot/: filters.py  instance.py  middlewares.py  setup.py
src/bot/handlers/: commands.py
src/core/: exceptions.py  lifespan.py  middleware.py  monitoring.py  prometheus.py  settings.py
src/db/: dependencies.py
src/db/crud/: binding.py
src/db/migrations/versions/: 2026-01-01-00-00_0001_create_binding.py
src/db/models/: binding.py
src/schemas/: binding.py
src/services/formatters/: base.py  job.py  merge_request.py  note.py  pipeline.py  push.py  registry.py  release.py  tag.py
src/services/gitlab/: dispatcher.py
src/services/telegram/: notifier.py
tests/: conftest.py  payloads.py  test_binding_repository.py  test_bot_commands.py  test_formatters.py  test_gitlab_webhook.py  test_telegram_notifier.py
